# Not-C-Compiler

./: .gitignore  CMakeLists.txt  README.md
docs/: notc.doxygen
src/: CMakeLists.txt  parser.y  scanner.l
src/ast/: CMakeLists.txt  ast.c
src/include/: ast.h  common.h  configure.h  data_lists.h  errors.h  memory.h  misc.h  parser.h  scanner.h  stacks.h  symbol_table.h
src/notc/: CMakeLists.txt  notc.c
src/parse/: CMakeLists.txt  do_data_or_func_def.c  do_import.c  do_typedef.c  internal.h  parse_data_or_func_def.c  parse_import.c  parse_typedef.c  parser.c  scanner.c  scanner.l  types.c
src/simple/: CMakeLists.txt  simple.c
src/support/: CMakeLists.txt  ast.c  dump_ast.c  symbol_table.c
src/utils/: CMakeLists.txt  configure.c  data_lists.c  errors.c  hash_table.c  memory.c  misc.c  ptr_lists.c  stacks.c  tok_to_strg.c
tests/: include1.s  include2.s  include_test.s  name.s  test_ast.c  test_data_lists.c  test_hash_table.c  test_ptr_lists.c  test_stacks.c  testfile.dot
